--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
   "author": "Yashasvi Saxena",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
+    "eslint": "^9.35.0",
+    "globals": "^16.3.0",
     "nodemon": "^3.1.3",
     "prettier": "^3.3.2"
   },
@@ -28,6 +31,8 @@
     "mongoose-aggregate-paginate-v2": "^1.1.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "winston": "^3.17.0",
     "zod": "^3.24.1"
   }
