--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,7 +1,23 @@
 {
-  "singleQuote": false,
-  "bracketSpacing": true,
-  "tabWidth": 2,
+  "singleQuote": true,
   "semi": true,
-  "trailingComma": "es5"
+  "tabWidth": 2,
+  "useTabs": false,
+  "printWidth": 80,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "quoteProps": "as-needed",
+  "jsxSingleQuote": true,
+  "proseWrap": "preserve",
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "importOrder": [
+    "^node:",
+    "<THIRD_PARTY_MODULES>",
+    "^[./]"
+  ],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
