--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,18 @@
   "scripts": {
     "api": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
     "video": "nodemon -r dotenv/config --experimental-json-modules src/socket.js",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "build": "npm run format && npm run lint && npm run api"
   },
   "author": "Yashasvi Saxena",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "eslint": "^9.35.0",
+    "eslint-plugin-import": "^2.32.0",
     "globals": "^16.3.0",
     "nodemon": "^3.1.3",
     "prettier": "^3.3.2"
